Revert "Fix style errors"
This reverts commit 22e1477201d53682ceec8b28dd4031bc6fc1f8fa.

--- a/docs/templates/document.html.slim
+++ b/docs/templates/document.html.slim
@@ -10,7 +10,7 @@ html lang=(attr :lang, 'en' unless attr? :nolang)
     = html_meta_if 'application-name', (attr 'app-name')
     = html_meta_if 'author', (attr :authors)
     = html_meta_if 'copyright', (attr :copyright)
-    = html_meta_if 'value', (attr :value)
+    = html_meta_if 'description', (attr :description)
     = html_meta_if 'keywords', (attr :keywords)
     title=((doctitle sanitize: true) || (attr 'untitled-label'))
     = styles_and_scripts
