--- a/src/main/resources/view/EventListCard.fxml
+++ b/src/main/resources/view/EventListCard.fxml
@@ -18,12 +18,12 @@
                 <Insets top="5" right="5" bottom="5" left="15" />
             </padding>
             <HBox spacing="5" alignment="CENTER_LEFT">
-                <Label fx:id="value" text="\$first" styleClass="cell_big_label" />
+                <Label fx:id="eventName" text="\$first" styleClass="cell_big_label" />
             </HBox>
-            <Label fx:id="value" styleClass="cell_small_label" text="\$value" />
-            <Label fx:id="value" styleClass="cell_small_label" text="\$startTIme" />
-            <Label fx:id="value" styleClass="cell_small_label" text="\$value" />
-            <Label fx:id="value" styleClass="cell_small_label" text="\$value" />
+            <Label fx:id="date" styleClass="cell_small_label" text="\$date" />
+            <Label fx:id="startTime" styleClass="cell_small_label" text="\$startTIme" />
+            <Label fx:id="endTime" styleClass="cell_small_label" text="\$endTime" />
+            <Label fx:id="description" styleClass="cell_small_label" text="\$description" />
         </VBox>
     </GridPane>
 </HBox>
