--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -77,20 +77,21 @@
 }
 
 .split-pane:horizontal .split-pane-divider {
-    -fx-background-color: derive(#1d1d1d, 20%);
-    -fx-border-color: transparent transparent transparent #4d4d4d;
+    -fx-background-color: derive(#EBF5FB, 20%);
+    -fx-border-color: #EBF5FB;
 }
 
+/* The box around the three divisions of the three GUI */
 .split-pane {
     -fx-border-radius: 1;
     -fx-border-width: 1;
-    -fx-background-color: derive(#1d1d1d, 20%);
+    -fx-background-color: #EBF5FB;
 }
 
 .list-view {
     -fx-background-insets: 0;
     -fx-padding: 0;
-    -fx-background-color: derive(#1d1d1d, 20%);
+    -fx-background-color: #EBF5FB;
 }
 
 .list-cell {
@@ -100,15 +101,33 @@
 }
 
 .list-cell:filled:even {
-    -fx-background-color: #3c3e3f;
+    -fx-background-color: #EBF5FB;
+}
+
+.list-cell:filled:even .cell_small_label {
+    -fx-text-fill: #1B4F72;
+}
+
+.list-cell:filled:even .cell_big_label {
+    -fx-text-fill: #1B4F72;
 }
 
 .list-cell:filled:odd {
-    -fx-background-color: #515658;
+    -fx-background-color: #1B4F72;
 }
 
+.list-cell:filled:odd .cell_small_label {
+    -fx-text-fill: #EBF5FB;
+}
+
+.list-cell:filled:odd .cell_big_label {
+    -fx-text-fill: #EBF5FB;
+}
+
+
 .list-cell:filled:selected {
-    -fx-background-color: #424d5f;
+    -fx-border-color: #3e7b91;
+    -fx-border-width: 3;
 }
 
 .list-cell:filled:selected #cardPane {
@@ -129,16 +148,16 @@
 .cell_small_label {
     -fx-font-family: "Segoe UI";
     -fx-font-size: 13px;
-    -fx-text-fill: #010504;
+    -fx-text-fill: inherit;
 }
 
 .stack-pane {
-     -fx-background-color: derive(#1d1d1d, 20%);
+     -fx-background-color: derive(#707B7C, 20%);
 }
 
 .pane-with-border {
-     -fx-background-color: derive(#1d1d1d, 20%);
-     -fx-border-color: derive(#1d1d1d, 10%);
+     -fx-background-color: derive(#EBF5FB, 20%);
+     -fx-border-color: derive(#EBF5FB, 10%);
      -fx-border-top-width: 1px;
 }
 
@@ -151,7 +170,7 @@
     -fx-background-color: transparent;
     -fx-font-family: "Segoe UI Light";
     -fx-font-size: 13pt;
-    -fx-text-fill: white;
+    -fx-text-fill: black;
 }
 
 .result-display .label {
@@ -164,8 +183,8 @@
 }
 
 .status-bar-with-border {
-    -fx-background-color: derive(#1d1d1d, 30%);
-    -fx-border-color: derive(#1d1d1d, 25%);
+    -fx-background-color: derive(#1B4F72, 30%);
+    -fx-border-color: derive(#1B4F72, 25%);
     -fx-border-width: 1px;
 }
 
@@ -174,13 +193,13 @@
 }
 
 .grid-pane {
-    -fx-background-color: derive(#1d1d1d, 30%);
-    -fx-border-color: derive(#1d1d1d, 30%);
+    -fx-background-color: derive(#1B4F72, 30%);
+    -fx-border-color: derive(#1B4F72, 30%);
     -fx-border-width: 1px;
 }
 
 .grid-pane .stack-pane {
-    -fx-background-color: derive(#1d1d1d, 30%);
+    -fx-background-color: derive(#1B4F72, 30%);
 }
 
 .context-menu {
@@ -192,7 +211,7 @@
 }
 
 .menu-bar {
-    -fx-background-color: derive(#1d1d1d, 20%);
+    -fx-background-color: derive(#1B4F72, 20%);
 }
 
 .menu-bar .label {
@@ -281,11 +300,11 @@
 }
 
 .scroll-bar {
-    -fx-background-color: derive(#1d1d1d, 20%);
+    -fx-background-color: derive(#EBF5FB, 20%);
 }
 
 .scroll-bar .thumb {
-    -fx-background-color: derive(#1d1d1d, 50%);
+    -fx-background-color: derive(#1B4F72, 50%);
     -fx-background-insets: 3;
 }
 
@@ -317,14 +336,14 @@
 }
 
 #commandTextField {
-    -fx-background-color: transparent #383838 transparent #383838;
+    -fx-background-color: #D6EAF8;
     -fx-background-insets: 0;
-    -fx-border-color: #383838 #383838 #ffffff #383838;
+    -fx-border-color: #D6EAF8;
     -fx-border-insets: 0;
     -fx-border-width: 1;
     -fx-font-family: "Segoe UI Light";
     -fx-font-size: 13pt;
-    -fx-text-fill: white;
+    -fx-text-fill: black;
 }
 
 #filterField, #personListPanel, #personWebpage {
@@ -332,7 +351,7 @@
 }
 
 #resultDisplay .content {
-    -fx-background-color: transparent, #383838, transparent, #383838;
+    -fx-background-color: transparent, #D6EAF8  , transparent, #D6EAF8;
     -fx-background-radius: 0;
 }
 
