--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.layout.TilePane?>
 <fx:root type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
          minWidth="900" minHeight="600" onCloseRequest="#handleExit">
   <icons>
@@ -47,20 +48,13 @@
         </StackPane>
 
         <SplitPane id="splitPane" fx:id="splitPane" dividerPositions="0.4" VBox.vgrow="ALWAYS">
-          <StackPane maxWidth="320">
-            <VBox fx:id="groupList" minWidth="120" prefWidth="120" prefHeight="300" SplitPane.resizableWithParent="false">
+            <VBox fx:id="groupList" minWidth="320" prefWidth="320" SplitPane.resizableWithParent="false" VBox.vgrow="ALWAYS">
               <padding>
                 <Insets top="10" right="10" bottom="10" left="10" />
               </padding>
-              <StackPane fx:id="groupListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
-            </VBox>
-            <VBox SplitPane.resizableWithParent="false">
-              <padding>
-                <Insets top="310" right="10" bottom="10" left="10" />
-              </padding>
+              <StackPane fx:id="groupListPanelPlaceholder" VBox.vgrow="ALWAYS" minHeight="240"/>
               <StackPane fx:id="graphPlaceholder" minWidth="300" prefWidth="300" maxWidth="300" VBox.vgrow="ALWAYS" />
             </VBox>
-          </StackPane>
 
 
           <VBox fx:id="studentList" minWidth="340" prefWidth="340" SplitPane.resizableWithParent="false">
